[package]
name = "rust_emb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Device dependencies
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
nrf52833-hal = "0.15.1"
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"

# Debug dependencies
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = "0.3.0"